# Routine-Walkthrough

./: README.md
routine-walkthrough/: pyproject.toml
routine-walkthrough/routine_walkthrough/: __init__.py  json_back_end.py  main.py  routine_select.ui  routine_select_ui.py  routine_viewer.ui  routine_viewer_ui.py  routines.json  routines_backup.json  styles.qss
routine-walkthrough/tests/: __init__.py  main_window_template.ui  main_window_template_ui.py  multiple_screens_test.py  screen_ui.py  second_window_template_ui.py  tasks.json
