[tool.poetry]
name = "routine-walkthrough"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "routine_walkthrough"}]

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "^6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
